--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Animália</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style display-7">Oferecer atendimento especializado, produtos diversificados e de qualidade, cuidando com respeito, carinho e dedicação de todo e qualquer animal, priorizando a vida e atendendo sempre nossos clientes de forma diferenciada e com profissionalismo.</p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="https://mobirise.com">ir</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="">ir</a></div>
             </div>
         </div>
     </div>
